# kitkat-cuidAR

./: README.md  _build.bat  aplicar_res_kitkat.bat  modificaciones_manuales.txt  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/atexit/: atexit.c  atexit.h
app/src/main/cpp/kitkat/: kitkat-wrapper.cpp  kitkat-wrapper.h  stackchkguard-impl.cpp  stackchkguard-impl.h
app/src/main/cpp/locale/: locale-impl.cpp  locale-impl.h
app/src/main/cpp/pthread/: pthread-impl.cpp
app/src/main/cpp/wchar/: wchar-impl.cpp  wchar-impl.h
app/src/main/java/wrapper/: EmptyDrawable.java  KitKat.java  SelfX509TrustManager.java  Tls12SocketFactory.java
app/src/main/java/xandroid/util/: Size.java  SizeF.java
app/src/main/java/xandroid/view/accessibility/: AccessibilityAction.java
gradle/wrapper/: gradle-wrapper.properties
kitkat_lib-kitkat/: leeme.txt
kitkat_res/drawable/: abc_action_bar_item_background_material.xml  abc_dialog_material_background.xml  notification_action_background.xml
kitkat_smali/android/util/: Size.smali  SizeF.smali
kitkat_smali/wrapper/: EmptyDrawable.smali  KitKat.smali  SelfX509TrustManager.smali  Tls12SocketFactory.smali
kitkat_smali/xandroid/view/accessibility/: AccessibilityAction$1.smali  AccessibilityAction.smali
parches_smali/: parche_kitkat.smrespatcher.ini
